--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,41 @@
-<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         {% endblock %}
 
         {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         {% endblock %}
+        <link rel="stylesheet" href="{{ asset('assets/css/base.css') }}">
     </head>
     <body>
-        {% block body %}{% endblock %}
+    <div class="d-flex" id="wrapper">
+        <!-- Sidebar -->
+        <div class="bg-light border-right" id="sidebar-wrapper">
+            <div class="sidebar-heading">QTest {% if app.user %} {{ app.user.fullName }} {% endif %}</div>
+            <div class="list-group list-group-flush">
+                {% if app.user %}
+                    <a href="{{ path('app_authors') }}" class="list-group-item list-group-item-action bg-light">Authors</a>
+                    <a href="{{ path('app_logout') }}" class="list-group-item list-group-item-action bg-light">Logout</a>
+                {% else %}
+                    <a href="{{ path('app_login') }}" class="list-group-item list-group-item-action bg-light">Login</a>
+                {% endif %}
+            </div>
+        </div>
+        <div id="page-content-wrapper">
+            <div class="top-title">
+                <h5>{% block pageTitle %}{% endblock %}</h5>
+            </div>
+            <div class="container-fluid">
+                {% block body %}
+
+                {% endblock %}
+            </div>
+        </div>
+    </div>
     </body>
 </html>
