--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,8 @@
             <div class="sidebar-heading">QTest {% if app.user %} {{ app.user.fullName }} {% endif %}</div>
             <div class="list-group list-group-flush">
                 {% if app.user %}
-                    <a href="{{ path('app_authors') }}" class="list-group-item list-group-item-action bg-light">Authors</a>
+                    <a href="{{ path('authors_all') }}" class="list-group-item list-group-item-action bg-light">Authors</a>
+                    <a href="{{ path('book_insert') }}" class="list-group-item list-group-item-action bg-light">Insert book</a>
                     <a href="{{ path('app_logout') }}" class="list-group-item list-group-item-action bg-light">Logout</a>
                 {% else %}
                     <a href="{{ path('app_login') }}" class="list-group-item list-group-item-action bg-light">Login</a>
